+++++++++++
Python News
+++++++++++

(editors: check NEWS.help for information about editing NEWS using ReST.)

What's New in Python 2.7 alpha 2?
=================================

*Release date: XXXX-XX-XX*

Core and Builtins
-----------------

- Issue #7413: Passing '\0' as the separator to datetime.datetime.isoformat()
  used to drop the time part of the result.

- Issue #1811: improve accuracy and cross-platform consistency for
  true division of integers: the result of a/b is now correctly
  rounded for ints a and b (at least on IEEE 754 platforms), and in
  particular does not depend on the internal representation of a long.

- Issue #6108: unicode(exception) and str(exception) should return the same
  message when only __str__ (and not __unicode__) is overridden in the subclass.

- Issue #6834: replace the implementation for the 'python' and 'pythonw'
  executables on OSX.

  These executables now work properly with the arch(1) command:
  ``arch -ppc python`` will start a universal binary version of python
  in PPC mode (unlike previous releases).

- Issue #1680159: unicode coercion during an 'in' operation no longer masks
  the underlying error when the coercion fails for the left hand operand.

- Issue #7491: Metaclass's __cmp__ method was ignored.

- Issue #7466: segmentation fault when the garbage collector is called
  in the middle of populating a tuple.  Patch by Florent Xicluna.


Library
-------

- Distutils now correctly identifies the build architecture as "x86_64"
  when building on OSX 10.6 without "-arch" flags. 

- Issue #7556: Distutils' msvc9compiler now opens the MSVC Manifest 
  file in text mode.

- Issue #7552: Removed line feed in the base64 Authorization header in
  the Distutils upload command to avoid an error when PyPI reads it.
  This occurs on long passwords. Initial patch by JP St. Pierre.

- Issue #7231: urllib2 cannot handle https with proxy requiring auth.
  Patch by Tatsuhiro Tsujikawa.
