@@ -12,6 +12,8 @@ What's New in Python 2.7 alpha 2?
 Core and Builtins
 -----------------
 
+- Issue #7579: the msvcrt module now has docstrings for all its functions.
+
 - Issue #7413: Passing '\0' as the separator to datetime.datetime.isoformat()
   used to drop the time part of the result.
 
